<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/back_ground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructions_view"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_text1"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_view"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_text2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_text3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_text4"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_text5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <Button
        android:id="@+id/button"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:layout_marginTop="60dp"
        android:onClick="sendMessage"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />


</androidx.constraintlayout.widget.ConstraintLayout>